etc/envoy.front.template.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/ai.metathings.service.identity.IdentityService"
                route:
                  cluster: identityd
              - match:
                  prefix: "/ai.metathings.service.core.CoreService"
                route:
                  cluster: cored
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: identityd
    connect_timeout: 5s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: identityd
        port_value: 5000
  - name: cored
    connect_timeout: 5s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: cored
        port_value: 5001
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
